// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataProductAvailability - EnhancedAvailabilityKey renders correctly when selection is enabled 1`] = `
<div
  className="makeStyles-keyContainer-5"
>
  <div>
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-h6Small-8 css-134ad2t-MuiTypography-root"
      style={
        {
          "margin": "-6px 24px 4px 0px",
        }
      }
    >
      Key:
    </h6>
    <button
      aria-label="Help - Data Availability Chart Key"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "marginLeft": "-3px",
        }
      }
      tabIndex={0}
      title="Help - Data Availability Chart Key"
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
  <div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data have been published and released. Data are available for download"
    >
      <svg
        height={14}
        width={151}
      >
        <rect
          fill="#002c77"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Release Available
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data have been collected and will be published after processing has completed"
    >
      <svg
        height={14}
        width={135}
      >
        <rect
          fill="url(#beingProcessedPattern)"
          height="10.5px"
          rx="1px"
          stroke="#002c77"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Being Processed
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data collection is scheduled to happen"
    >
      <svg
        height={14}
        width={79}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#002c77"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Expected
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="No data collection is scheduled"
    >
      <svg
        height={14}
        width={111}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#d7d9d9"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Not Expected
        </text>
      </svg>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data was neither expected nor collected"
    >
      <svg
        height={14}
        width={119}
      >
        <rect
          fill="#d7d9d9"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Not Available
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data collection was expected but collection could not take place; no data will be published"
    >
      <svg
        height={14}
        width={119}
      >
        <rect
          fill="#f8bb32"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Not Collected
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data should be available for download but something has prevented publication"
    >
      <svg
        height={14}
        width={71}
      >
        <rect
          fill="url(#delayedPattern)"
          height="10.5px"
          rx="1px"
          stroke="#f8bb32"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Delayed
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="Data collection is desired but not expected until other conditions are met"
    >
      <svg
        height={14}
        width={87}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#b39076"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={15}
          y={9}
        >
          Potential
        </text>
      </svg>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="If the chart is presenting a roll-up (e.g. view by state) then all sites rolled into a given row are selected"
    >
      <svg
        height={14}
        width={201}
      >
        <rect
          fill="#0073cf"
          height={10}
          width={45}
          x={0.5}
          y={1.5}
        />
        <rect
          fill="#5ca6e3"
          height={12}
          stroke="#0073cf"
          strokeWidth={1.5}
          width={4}
          x={0.5}
          y={0.5}
        />
        <rect
          fill="#5ca6e3"
          height={12}
          stroke="#0073cf"
          strokeWidth={1.5}
          width={4}
          x={41}
          y={0.5}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={57}
          y={9}
        >
          All sites selected
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-6"
      onClick={[Function]}
      role="button"
      title="If the chart is presenting a roll-up (e.g. view by state) then one or more but not all of the sites rolled into a given row are selected"
    >
      <svg
        height={14}
        width={209}
      >
        <rect
          fill="url(#partialSelectionPattern)"
          height={10}
          width={45}
          x={0.5}
          y={1.5}
        />
        <rect
          fill="#5ca6e3"
          height={12}
          stroke="#0073cf"
          strokeWidth={1.5}
          width={4}
          x={0.5}
          y={0.5}
        />
        <rect
          fill="#5ca6e3"
          height={12}
          stroke="#0073cf"
          strokeWidth={1.5}
          width={4}
          x={41}
          y={0.5}
        />
        <text
          className="makeStyles-keyElementText-7"
          x={57}
          y={9}
        >
          Some sites selected
        </text>
      </svg>
    </div>
  </div>
</div>
`;

exports[`DataProductAvailability - EnhancedAvailabilityKey renders correctly when selection is not enabled (default) 1`] = `
<div
  className="makeStyles-keyContainer-1"
>
  <div>
    <h6
      className="MuiTypography-root MuiTypography-h6 makeStyles-h6Small-4 css-134ad2t-MuiTypography-root"
      style={
        {
          "margin": "-6px 24px 4px 0px",
        }
      }
    >
      Key:
    </h6>
    <button
      aria-label="Help - Data Availability Chart Key"
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeSmall css-8spxgg-MuiButtonBase-root-MuiIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        {
          "marginLeft": "-3px",
        }
      }
      tabIndex={0}
      title="Help - Data Availability Chart Key"
      type="button"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
        data-testid="HelpOutlineIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4"
        />
      </svg>
    </button>
  </div>
  <div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data have been published and released. Data are available for download"
    >
      <svg
        height={14}
        width={151}
      >
        <rect
          fill="#002c77"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Release Available
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data have been collected and will be published after processing has completed"
    >
      <svg
        height={14}
        width={135}
      >
        <rect
          fill="url(#beingProcessedPattern)"
          height="10.5px"
          rx="1px"
          stroke="#002c77"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Being Processed
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data collection is scheduled to happen"
    >
      <svg
        height={14}
        width={79}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#002c77"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Expected
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="No data collection is scheduled"
    >
      <svg
        height={14}
        width={111}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#d7d9d9"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Not Expected
        </text>
      </svg>
    </div>
  </div>
  <div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data was neither expected nor collected"
    >
      <svg
        height={14}
        width={119}
      >
        <rect
          fill="#d7d9d9"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Not Available
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data collection was expected but collection could not take place; no data will be published"
    >
      <svg
        height={14}
        width={119}
      >
        <rect
          fill="#f8bb32"
          height="12px"
          rx="2px"
          stroke={null}
          strokeWidth={null}
          width="7px"
          x={0}
          y={0}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Not Collected
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data should be available for download but something has prevented publication"
    >
      <svg
        height={14}
        width={71}
      >
        <rect
          fill="url(#delayedPattern)"
          height="10.5px"
          rx="1px"
          stroke="#f8bb32"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Delayed
        </text>
      </svg>
    </div>
    <div
      className="makeStyles-keyElement-2"
      onClick={[Function]}
      role="button"
      title="Data collection is desired but not expected until other conditions are met"
    >
      <svg
        height={14}
        width={87}
      >
        <rect
          fill="#ffffff"
          height="10.5px"
          rx="1px"
          stroke="#b39076"
          strokeWidth="1.5px"
          width="5.5px"
          x={0.75}
          y={0.75}
        />
        <text
          className="makeStyles-keyElementText-3"
          x={15}
          y={9}
        >
          Potential
        </text>
      </svg>
    </div>
  </div>
</div>
`;
